# CanvasCritique

./: .gitignore  LICENCE  Makefile  README.md  fix_migrate.cjs  index.html  package-lock.json  package.json  tsconfig.json  update_media.cjs  vite.config.js
.agents/rules/: code-style-guide.md  version-release.md
.kilo/plans/: 1782648389859-task-batch-multi-agent.md  1782729018620-remove-api-key-encryption.md  1782732925787-touch-pinch-zoom-image-preview.md  sqlite-filesystem-storage.md
google stitch templates - design/deep_ink_systematic/: DESIGN.md
google stitch templates - design/home_project_dashboard_interactive_refinement/: code.html
google stitch templates - design/practice_dashboard_sidebar_refinement/: code.html
google stitch templates - design/settings_desktop_refined/: code.html
google stitch templates - design/task_editor_refined_layout/: code.html
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  main.rs
src/lib/: db.ts
src/lib/components/: Notification.svelte  Sidebar.svelte
src/lib/db/: crypto.ts  media.ts
src/lib/i18n/: de.json  en.json
src/lib/services/: ai.ts  i18n.ts  update.ts  webdav.ts  windowState.ts
src/lib/state/: defaults.ts  store.svelte.js  store.svelte.ts  types.ts
src/lib/utils/: canvas.ts  ccpack.ts  markdown.ts  modality.ts  touchDragPolyfill.ts
src/lib/views/: Dashboard.svelte  PracticeCanvas.svelte  ProjectDetail.svelte  Settings.svelte  TaskEditor.svelte
(+38 files in other folders)
