[package]
name = "canvascritique"
version = "0.1.0"
description = "Canvas Critique Handwriting Practice App"
authors = ["Franz"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
panic = "abort" # Strip expensive panic infomation
codegen-units = 1 # Optimize for size
lto = true # Link-time optimization
opt-level = "s" # Optimize for size
strip = true # Strip symbols
