[package]
name = "canvascritique"
version = "1.0.1"
description = "Canvas Critique Handwriting Practice App"
authors = ["Franz"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"
rand = "0.8"
[target.'cfg(target_os = "linux")'.dependencies]
glib = "0.20.0"

[profile.release]
panic = "abort" # Strip expensive panic infomation
codegen-units = 1 # Optimize for size
lto = true # Link-time optimization
opt-level = "s" # Optimize for size
strip = true # Strip symbols
